Fixed audio player for audio attachments making scrollbar invisible on IE9.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1954,6 +1954,9 @@ sender-column-width = 150px
     max-width 100%
     height auto
 
+  .audio-attachment
+    max-width 300px
+
   .message-body
     overflow hidden
     white-space pre-wrap
